# climate_control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  btstack_config.h  iaq_tracker.gatt  main.c  sensor.c  sensor.gatt
bsec/: CMakeLists.txt
bsec/config/bme680_iaq_18v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec/config/bme680_iaq_18v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec/config/bme680_iaq_18v_3s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec/config/bme680_iaq_18v_3s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec/config/bme680_iaq_33v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec/config/bme680_iaq_33v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec/inc/: bsec_integration.h
bsec/src/: bsec_integration.c
bt_services/: climate_tracker.c  climate_tracker.h  ess.c  ess.h  iaq.c  iaq.h
